<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="about_version"
        android:title="@string/about_version_title" />

    <Preference
        android:key="about_license"
        android:summary="@string/safe_url"
        android:title="@string/about_safe_title" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/safe_url" />
    </Preference>

    <Preference
		android:summary="@string/copyright"
        android:title="@string/about_copyright_title" />

    <!--<Preference-->
        <!--android:key="about_license"-->
        <!--android:summary="https://www.gnu.org/licenses/gpl-3.0.txt"-->
        <!--android:title="@string/about_license_title" >-->
        <!--<intent-->
            <!--android:action="android.intent.action.VIEW"-->
            <!--android:data="https://www.gnu.org/licenses/gpl-3.0.txt" />-->
    <!--</Preference>-->

	<!--<Preference-->
		<!--android:key="about_source"-->
		<!--android:summary="https://github.com/BankLedger/safe-wallet-android"-->
		<!--android:title="@string/about_source_title" >-->
		<!--<intent-->
			<!--android:action="android.intent.action.VIEW"-->
			<!--android:data="https://github.com/BankLedger/safe-wallet-android" />-->
	<!--</Preference>-->

</PreferenceScreen>